# milvus-sdk-rust

./: Cargo.toml  README.md  build.rs
examples/: iterator.rs  query_search.rs
src/: collection.rs  data.rs  error.rs  iterator.rs  lib.rs  partition.rs  query.rs  schema.rs  tests_common.rs  types.rs  utils.rs
tests/: alias.rs  client.rs  collection.rs  partition.rs
tests/aggressivehpctesting/: mod.rs  phase_1_crud_and_indexing.rs  phase_2_search_and_query.rs  phase_3_soak_test.rs
tests/testsoutsideoftestsuite/: client_flush_collections.rs  client_search.rs  client_with_timeout.rs  collection_get_collection_stats.rs  collection_get_compaction_state.rs  collection_list_collections.rs  collection_release_collection.rs  mutate_delete.rs  partition_create_partition.rs  partition_drop_partition.rs  partition_get_partition_stats.rs  partition_has_partition.rs  partition_list_partitions.rs
